default/objects/Terminal__c/Terminal__c.object-meta.xml
<CustomObject>
    <label>Terminal</label>
    <nameField>
        <label>Terminal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terminals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>