default/objects/Terminal__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Terminals</relationshipLabel>
    <relationshipName>Terminals</relationshipName>
    <type>Lookup</type>
</CustomField>