default/objects/Terminal__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Terminals</relationshipLabel>
    <relationshipName>Terminals</relationshipName>
    <type>Lookup</type>
</CustomField>