default/objects/Terminal__c/fields/DelcoID__c.field-meta.xml
<CustomField>
    <fullName>DelcoID__c</fullName>
    <label>DELCO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>