default/objects/Terminal__c/fields/ISOCode__c.field-meta.xml
<CustomField>
    <fullName>ISOCode__c</fullName>
    <label>ISOCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CZE</fullName>
            </value>
            <value>
                <fullName>SVK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>