default/objects/Terminal__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Terminals</relationshipLabel>
    <relationshipName>Terminals</relationshipName>
    <type>Lookup</type>
</CustomField>