default/objects/Terminal__c/fields/SiteCode__c.field-meta.xml
<CustomField>
    <fullName>SiteCode__c</fullName>
    <label>SiteCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>