default/objects/Terminal__c/fields/SiteOwnerTerminalNumber__c.field-meta.xml
<CustomField>
    <fullName>SiteOwnerTerminalNumber__c</fullName>
    <label>SiteOwnerTerminalNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>