default/objects/Terminal__c/fields/Stat__c.field-meta.xml
<CustomField>
    <fullName>Stat__c</fullName>
    <label>Stat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>