default/objects/Terminal__c/fields/TerminalNumber__c.field-meta.xml
<CustomField>
    <fullName>TerminalNumber__c</fullName>
    <label>TerminalNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>